docs: Prepare project for GitHub publication
Major updates:
- Add comprehensive documentation (15+ files, 5000+ lines)
- Add GitHub publication checklist and security policy
- Add .gitattributes for proper line endings
- Add configuration examples (*.example files)
- Update .gitignore with SSH keys and test files
- Add monitoring guides (Prometheus, Grafana, PromQL)

Infrastructure improvements:
- Add Node Exporter to all servers
- Fix Prometheus configuration (localhost to 10.0.1.3)
- Fix Grafana Data Source connection
- Update Security Groups for monitoring (port 9100)

Documentation added:
- ACCESS_GUIDE.md - access instructions and credentials
- DEPLOYMENT_GUIDE.md - complete deployment guide
- CREDENTIALS.md - credentials reference
- PROMQL_QUERIES.md - PromQL queries reference (50+ examples)
- GRAFANA_DASHBOARDS_GUIDE.md - Grafana setup guide
- GITHUB_CHECKLIST.md - step-by-step publication guide
- Multiple completion reports and guides

Scripts and automation:
- 30+ automation scripts for setup and monitoring
- Docker compose configurations for ELK stack
- Ansible playbooks and templates for all services
- PowerShell scripts for Windows management

Project statistics:
- 100+ files, 15,000+ lines of code
- 15 documentation files, 115+ pages
- 26 Terraform resources, 6 VMs deployed
- Full monitoring stack (Prometheus, Grafana, Zabbix)
- ELK stack (Elasticsearch, Kibana, Filebeat)

Status: Production Ready & GitHub Ready
All 7 tasks completed: 100%

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,11 @@ ssh_key*
 id_rsa*
 id_ed25519*
 
+# Specific SSH keys in project
+ansible/ssh_key.pem
+ssh_key_terraform.pem
+ssh_key.pem
+
 # IDE
 .vscode/
 .idea/
@@ -49,6 +54,10 @@ Thumbs.db
 *.log
 *.tmp
 *.temp
+
+# Test files
+test_*
+*_test.*
 
 # Environment variables
 .env
@@ -178,3 +187,34 @@ status/
 backup/
 backups/
 *.backup.*
+
+# Дополнительные чувствительные файлы
+terraform_outputs.json
+zabbix_db_options.txt
+zada4a.txt
+
+# Terraform plan файлы
+tfplan
+*.tfplan
+
+# JSON файлы с выводом Terraform
+terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
+terraform/*.backup
+
+# Дополнительные SSH ключи
+*.pem.pub
+ssh_key_terraform.pem
+ssh_key_from_terraform.pem
+
+# Docker compose override
+docker-compose.override.yml
+docker-compose.prod.yml
+
+# Скрипты с паролями
+*_password.sh
+*_credentials.sh
+
+# Файлы с реальными IP адресами (для примера)
+# real_ips.txt
+# production_ips.txt
