--- a/ansible/inventory/hosts.yml
+++ b/ansible/inventory/hosts.yml
@@ -5,37 +5,38 @@ all:
         bastion.ru-central1.internal:
           ansible_host: "{{ bastion_external_ip }}"
           ansible_user: ubuntu
-          ansible_ssh_private_key_file: ssh_key.pem
+          ansible_ssh_private_key_file: E:\Проект\diplom\ansible\ssh_key.pem
     
     web_servers:
       hosts:
         web1.ru-central1.internal:
           ansible_host: "{{ web1_internal_ip }}"
           ansible_user: ubuntu
-          ansible_ssh_private_key_file: ssh_key.pem
-          ansible_ssh_common_args: '-o ProxyCommand="ssh -W %h:%p -q ubuntu@{{ bastion_external_ip }} -i ssh_key.pem"'
+          ansible_ssh_private_key_file: E:\Проект\diplom\ansible\ssh_key.pem
+          ansible_ssh_common_args: '-o ProxyCommand="ssh -W %h:%p -q ubuntu@{{ bastion_external_ip }} -i E:\Проект\diplom\ansible\ssh_key.pem"'
         web2.ru-central1.internal:
           ansible_host: "{{ web2_internal_ip }}"
           ansible_user: ubuntu
-          ansible_ssh_private_key_file: ssh_key.pem
-          ansible_ssh_common_args: '-o ProxyCommand="ssh -W %h:%p -q ubuntu@{{ bastion_external_ip }} -i ssh_key.pem"'
+          ansible_ssh_private_key_file: E:\Проект\diplom\ansible\ssh_key.pem
+          ansible_ssh_common_args: '-o ProxyCommand="ssh -W %h:%p -q ubuntu@{{ bastion_external_ip }} -i E:\Проект\diplom\ansible\ssh_key.pem"'
     
     monitoring:
       hosts:
         zabbix.ru-central1.internal:
-          ansible_host: 10.0.1.7
+          ansible_host: "{{ zabbix_internal_ip }}"
           ansible_user: ubuntu
-          ansible_ssh_private_key_file: ssh_key.pem
-          ansible_ssh_common_args: '-o ProxyCommand="ssh -W %h:%p -q ubuntu@{{ bastion_external_ip }} -i ssh_key.pem"'
+          ansible_ssh_private_key_file: E:\Проект\diplom\ansible\ssh_key.pem
+          ansible_ssh_common_args: '-o ProxyCommand="ssh -W %h:%p -q ubuntu@{{ bastion_external_ip }} -i E:\Проект\diplom\ansible\ssh_key.pem"'
     
     logging:
       hosts:
         elasticsearch.ru-central1.internal:
           ansible_host: "{{ elasticsearch_internal_ip }}"
           ansible_user: ubuntu
-          ansible_ssh_private_key_file: ssh_key.pem
-          ansible_ssh_common_args: '-o ProxyCommand="ssh -W %h:%p -q ubuntu@{{ bastion_external_ip }} -i ssh_key.pem"'
+          ansible_ssh_private_key_file: E:\Проект\diplom\ansible\ssh_key.pem
+          ansible_ssh_common_args: '-o ProxyCommand="ssh -W %h:%p -q ubuntu@{{ bastion_external_ip }} -i E:\Проект\diplom\ansible\ssh_key.pem"'
         kibana.ru-central1.internal:
-          ansible_host: kibana
+          ansible_host: "{{ kibana_internal_ip }}"
           ansible_user: ubuntu
-          ansible_ssh_common_args: '-F ssh_config'
+          ansible_ssh_private_key_file: E:\Проект\diplom\ansible\ssh_key.pem
+          ansible_ssh_common_args: '-o ProxyCommand="ssh -W %h:%p -q ubuntu@{{ bastion_external_ip }} -i E:\Проект\diplom\ansible\ssh_key.pem"'
