--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,7 +1,7 @@
 ---
 # Common variables for all hosts
 ansible_user: ubuntu
-ansible_ssh_private_key_file: ../ssh_key.pem
+ansible_ssh_private_key_file: /tmp/ssh_key.pem
 
 # Nginx configuration
 nginx_user: www-data
@@ -21,3 +21,14 @@ ufw_enabled: true
 
 # Timezone
 timezone: "Europe/Moscow"
+
+# Infrastructure IP addresses (from Terraform outputs)
+bastion_external_ip: 158.160.104.48
+zabbix_external_ip: 158.160.112.98
+zabbix_internal_ip: 10.0.1.14
+kibana_external_ip: 62.84.112.42
+kibana_internal_ip: 10.0.1.3
+load_balancer_external_ip: 158.160.168.17
+elasticsearch_internal_ip: 10.0.4.34
+web1_internal_ip: 10.0.2.21
+web2_internal_ip: 10.0.3.3
