--- a/monitoring/docker-compose.yml
+++ b/monitoring/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 networks:
   monitoring:
     driver: bridge
@@ -10,8 +8,43 @@ volumes:
   alertmanager_data:
   loki_data:
   jaeger_data:
+  es_data:
 
 services:
+  # Elasticsearch - поиск и аналитика
+  elasticsearch:
+    image: elasticsearch:8.11.0
+    container_name: elasticsearch
+    restart: unless-stopped
+    environment:
+      - discovery.type=single-node
+      - xpack.security.enabled=false
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    volumes:
+      - ./elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
+      - es_data:/usr/share/elasticsearch/data
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+    networks:
+      - monitoring
+
+  # Kibana - визуализация данных
+  kibana:
+    image: kibana:8.11.0
+    container_name: kibana
+    restart: unless-stopped
+    ports:
+      - "5601:5601"
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+    volumes:
+      - ./kibana/kibana.yml:/usr/share/kibana/config/kibana.yml
+    networks:
+      - monitoring
+    depends_on:
+      - elasticsearch
+
   # Prometheus - система мониторинга и алертинга
   prometheus:
     image: prom/prometheus:v2.40.0
